# openclaw-sandbox

./: .gitignore  CHANGELOG.md  README.md  bootstrap.sh  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
ansible/: playbook.yml  requirements.yml
brew/: Brewfile
cli/: LICENSE  README.md  pyproject.toml
cli/src/sandbox_cli/: _capture.py  ansible_runner.py  app.py  bootstrap.py  dashboard.py  deps.py  lima_config.py  lima_manager.py  mcp_server.py  models.py  orchestrator.py  profile.py  reporting.py  validation.py
cli/src/sandbox_cli/templates/: lima-vm.yaml.j2
cli/tests/: test_ansible_runner.py  test_bootstrap.py  test_capture.py  test_commands.py  test_dashboard.py  test_delegation.py  test_deps.py  test_lima_config.py  test_lima_manager.py  test_mcp_server.py  test_models.py  test_orchestrator.py  test_profile.py  test_reporting.py  test_validation.py
docs/: SECURITY-ROADMAP.md  index.md  publication-series-outline.md  troubleshooting.md
docs/architecture/: defense-in-depth.md  overlay-filesystem.md  overview.md  secrets-pipeline.md
docs/configuration/: buildlog.md  cadence.md  dashboard-sync.md  docker-sandbox.md  github-cli.md  network-policy.md  obsidian-vault.md  overview.md  qortex.md  secrets.md  telegram.md
docs/development/: contributing.md  releases.md  testing.md
docs/diagrams/: .gitignore
docs/diagrams/src/: architecture.mmd  defense-in-depth.mmd  overlay-filesystem.mmd  (+2 more)
docs/getting-started/: first-session.md  installation.md  prerequisites.md
docs/security/: telegram-security-plan.md  threat-model.md
docs/usage/: bootstrap-flags.md  filesystem-modes.md  sync-gate.md  vm-management.md
lima/: openclaw-sandbox.yaml  openclaw-sandbox.yaml.tpl
scripts/: com.openclaw.cadence.plist  com.openclaw.dashboard-sync.plist  com.openclaw.vault-sync.plist  dashboard-sync.sh  dashboard.sh  release.sh  render-diagrams.sh  sync-gate.sh  sync-skills.sh  sync-vault-back.sh  sync-vault.sh
tests/: test-cadence-template.py
tests/buildlog/: run-all.sh  test-buildlog-ansible.sh  test-buildlog-role.sh
tests/cadence/: run-all.sh  test-cadence-ansible.sh  test-cadence-e2e.sh  test-cadence-role.sh
tests/docs/: run-all.sh  test-docs-build.sh  test-docs-structure.sh
tests/firewall/: run-all.sh  test-firewall-ansible.sh
tests/gateway/: run-all.sh  test-gateway-ansible.sh
tests/gh-cli/: run-all.sh  test-gh-cli-ansible.sh  test-gh-cli-role.sh
tests/obsidian/: run-all.sh  test-obsidian-ansible.sh  test-obsidian-role.sh
tests/overlay/: run-all.sh  test-overlay-ansible.sh  test-overlay-role.sh
tests/qortex/: run-all.sh  test-qortex-ansible.sh  test-qortex-role.sh
tests/sandbox/: run-all.sh  test-sandbox-ansible.sh  test-sandbox-role.sh
tests/telegram/: run-all.sh  test-telegram-ansible.sh  test-telegram-role.sh
(+71 files in other folders)
