[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-cli"
version = "0.1.0"
description = "Typer CLI wrapper for OpenClaw sandbox bootstrap"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1",
    "pydantic>=2,<3",
    "tomli>=2,<3;python_version<'3.11'",
    "tomli-w>=1,<2",
    "rich>=13,<14",
    "jinja2>=3.1,<4",
    "fastmcp>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pyyaml>=6,<7"]

[project.scripts]
sandbox = "sandbox_cli.app:app"
sandbox-mcp = "sandbox_cli.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
